--- a/index.html
+++ b/index.html
@@ -802,9 +802,9 @@
             <div class="row g-5">
                 <div class="col-lg-3 col-md-6">
                     <h4 class="text-white mb-4">Notre Bureau</h4>
-                    <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>123 Rue, Marseille, France</p>
-                    <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+33 781 618 076</p>
-                    <p class="mb-2"><i class="fa fa-envelope me-3"></i>info@votresite.com</p>
+                    <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>136 Chem. de la Madrague-Ville, 13015 Marseille</p>
+                    <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+33-782-695-499</p>
+                    <p class="mb-2"><i class="fa fa-envelope me-3"></i>contact@prodemarches.fr</p>
                     <div class="d-flex pt-2">
                         <a href="#" class="btn btn-square btn-outline-light rounded-circle me-2">
                             <i class="fab fa-twitter"></i>
